--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     // Initial load
     async function loadPosts() {
       const { data: posts, error } = await supabase
-        .from('posts')
+        .from('Submissions')
         .select('*')
         .order('Created_at', { ascending: false });
 
@@ -316,8 +316,8 @@
 
     // Realtime subscription
     supabase
-      .channel('public:posts')
-      .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'posts' }, payload => {
+      .channel('public:Submissions')
+      .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'Submissions' }, payload => {
         renderPost(payload.new);
       })
       .subscribe();
