--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First Love Church: Women’s Group Bulletin Board</title>
+
+  <!-- COLORS & STYLES -->
   <style>
-    /* COLORS & RESET */
     :root {
       --bg-color: #f5f2ed;
       --card-bg: #e9e2d0;
@@ -71,6 +72,8 @@
 
   <!-- Tally Embed Script -->
   <script async src="https://tally.so/widgets/embed.js"></script>
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <header>
@@ -98,39 +101,18 @@
     <button id="toggle-text">Toggle Larger Text</button>
   </div>
 
-  <!-- Add a Post Button with Tally popup -->
-  <button class="button" 
-          data-tally-open="w7AQdP" 
-          data-tally-layout="modal" 
-          data-tally-hide-title="1">
+  <!-- Add a Post Button -->
+  <button class="button" data-tally-open="w7AQdP" data-tally-layout="modal" data-tally-hide-title="1">
     Add a Post
   </button>
 
-  <!-- SECTIONS -->
-  <div class="section" id="prayer">
-    <h2>Prayer Request</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <div class="section" id="provision">
-    <h2>Provision Needed</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <div class="section" id="event">
-    <h2>Event</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <div class="section" id="update">
-    <h2>Other Update</h2>
-    <div class="card-container"></div>
-  </div>
+  <!-- Sections -->
+  <div class="section" id="prayer"><h2>Prayer Request</h2><div class="card-container"></div></div>
+  <div class="section" id="provision"><h2>Provision Needed</h2><div class="card-container"></div></div>
+  <div class="section" id="event"><h2>Event</h2><div class="card-container"></div></div>
+  <div class="section" id="update"><h2>Other Update</h2><div class="card-container"></div></div>
 
   <footer>&copy; First Love Church – Women’s Group</footer>
-
-  <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <script>
     // Hamburger
@@ -161,6 +143,7 @@
 
     const categoryMap = { "Prayer":"prayer", "Provision":"provision", "Event":"event", "Other Update":"update" };
 
+    // Render a post
     function renderPost(post){
       const sectionId = categoryMap[post.Category];
       if(!sectionId) return;
@@ -178,24 +161,30 @@
       container.prepend(card);
     }
 
+    // Load existing posts
     async function loadPosts(){
       const { data: posts, error } = await supabase
-        .from('Submissions')  // Correct table name
+        .from('Submissions')
         .select('*')
         .order('Created_at', { ascending:false });
-      if(error){ console.error("Error fetching posts:",error); return; }
+      if(error){ console.error("Error fetching posts:", error); return; }
+      console.log("Fetched posts:", posts);
       posts.forEach(post => renderPost(post));
     }
 
-    // Realtime subscription
-    supabase
-      .channel('public:Submissions')  // Correct table name
-      .on('postgres_changes', { event:'INSERT', schema:'public', table:'Submissions' }, payload=>{
-        renderPost(payload.new);
-      })
-      .subscribe();
+    // Realtime subscription for new posts
+    async function setupRealtime() {
+      const channel = supabase
+        .channel('public:Submissions')
+        .on('postgres_changes', { event: 'INSERT', schema: 'public', table:'Submissions' }, payload => {
+          console.log("New post inserted:", payload.new);
+          renderPost(payload.new);
+        });
+      await channel.subscribe();
+    }
 
     loadPosts();
+    setupRealtime();
   </script>
 </body>
 </html>
