--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First Love Church: Women’s Group Bulletin Board</title>
-
-  <!-- COLORS & STYLES -->
   <style>
+    /* COLORS & RESET */
     :root {
       --bg-color: #f5f2ed;
       --card-bg: #e9e2d0;
@@ -101,16 +100,34 @@
     <button id="toggle-text">Toggle Larger Text</button>
   </div>
 
-  <!-- Add a Post Button -->
-  <button class="button" data-tally-open="w7AQdP" data-tally-layout="modal" data-tally-hide-title="1">
+  <!-- Add a Post Button with Tally popup -->
+  <button class="button" 
+          data-tally-open="w7AQdP" 
+          data-tally-layout="modal" 
+          data-tally-hide-title="1">
     Add a Post
   </button>
 
-  <!-- Sections -->
-  <div class="section" id="prayer"><h2>Prayer Request</h2><div class="card-container"></div></div>
-  <div class="section" id="provision"><h2>Provision Needed</h2><div class="card-container"></div></div>
-  <div class="section" id="event"><h2>Event</h2><div class="card-container"></div></div>
-  <div class="section" id="update"><h2>Other Update</h2><div class="card-container"></div></div>
+  <!-- SECTIONS -->
+  <div class="section" id="prayer">
+    <h2>Prayer Request</h2>
+    <div class="card-container"></div>
+  </div>
+
+  <div class="section" id="provision">
+    <h2>Provision Needed</h2>
+    <div class="card-container"></div>
+  </div>
+
+  <div class="section" id="event">
+    <h2>Event</h2>
+    <div class="card-container"></div>
+  </div>
+
+  <div class="section" id="update">
+    <h2>Other Update</h2>
+    <div class="card-container"></div>
+  </div>
 
   <footer>&copy; First Love Church – Women’s Group</footer>
 
@@ -136,55 +153,57 @@
       localStorage.setItem('largeText', document.body.classList.contains('large-text'));
     });
 
-    // Supabase setup
-    const supabaseUrl = "https://btercxzikklbkjpltoey.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0ZXJjeHppa2tsYmtqcGx0b2V5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU5NjksImV4cCI6MjA3MTU4MTk2OX0.o0iUcb89y0TaN2-ze0cEFxljCt-tsZmbrZDl8NnEGfc";
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    // Supabase logic after page load
+    window.onload = async function() {
 
-    const categoryMap = { "Prayer":"prayer", "Provision":"provision", "Event":"event", "Other Update":"update" };
+      const supabaseUrl = "https://btercxzikklbkjpltoey.supabase.co";
+      const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0ZXJjeHppa2tsYmtqcGx0b2V5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU5NjksImV4cCI6MjA3MTU4MTk2OX0.o0iUcb89y0TaN2-ze0cEFxljCt-tsZmbrZDl8NnEGfc";
+      const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    // Render a post
-    function renderPost(post){
-      const sectionId = categoryMap[post.Category];
-      if(!sectionId) return;
-      const container = document.querySelector(`#${sectionId} .card-container`);
-      if(!container) return;
+      const categoryMap = { "Prayer":"prayer", "Provision":"provision", "Event":"event", "Other Update":"update" };
 
-      const card = document.createElement('div');
-      card.className = `card ${sectionId}`;
-      let html = `<h3>${post['Title/Subject']}</h3>`;
-      html += `<p>${post['Details/Description']}</p>`;
-      if(post['Event Date'] && sectionId==='event') html += `<small>Date: ${new Date(post['Event Date']).toLocaleDateString()}</small><br>`;
-      if(post['Name (Optional)']) html += `<small>– ${post['Name (Optional)']}</small>`;
-      if(post['Contact Info (Optional)']) html += `<br><small>Contact: ${post['Contact Info (Optional)']}</small>`;
-      card.innerHTML = html;
-      container.prepend(card);
-    }
+      function renderPost(post){
+        const sectionId = categoryMap[post.Category];
+        if(!sectionId) return;
+        const container = document.querySelector(`#${sectionId} .card-container`);
+        if(!container) return;
 
-    // Load existing posts
-    async function loadPosts(){
-      const { data: posts, error } = await supabase
-        .from('Submissions')
-        .select('*')
-        .order('Created_at', { ascending:false });
-      if(error){ console.error("Error fetching posts:", error); return; }
-      console.log("Fetched posts:", posts);
-      posts.forEach(post => renderPost(post));
-    }
+        const card = document.createElement('div');
+        card.className = `card ${sectionId}`;
+        let html = `<h3>${post['Title/Subject']}</h3>`;
+        html += `<p>${post['Details/Description']}</p>`;
+        if(post['Event Date'] && sectionId==='event') html += `<small>Date: ${new Date(post['Event Date']).toLocaleDateString()}</small><br>`;
+        if(post['Name (Optional)']) html += `<small>– ${post['Name (Optional)']}</small>`;
+        if(post['Contact Info (Optional)']) html += `<br><small>Contact: ${post['Contact Info (Optional)']}</small>`;
+        card.innerHTML = html;
+        container.prepend(card);
+      }
 
-    // Realtime subscription for new posts
-    async function setupRealtime() {
-      const channel = supabase
-        .channel('public:Submissions')
-        .on('postgres_changes', { event: 'INSERT', schema: 'public', table:'Submissions' }, payload => {
-          console.log("New post inserted:", payload.new);
-          renderPost(payload.new);
-        });
-      await channel.subscribe();
-    }
+      // Load existing posts
+      async function loadPosts(){
+        const { data: posts, error } = await supabase
+          .from('Submissions')
+          .select('*')
+          .order('Created_at', { ascending:false });
+        if(error){ console.error("Error fetching posts:", error); return; }
+        console.log("Fetched posts:", posts);
+        posts.forEach(post => renderPost(post));
+      }
 
-    loadPosts();
-    setupRealtime();
+      // Realtime subscription
+      async function setupRealtime() {
+        const channel = supabase
+          .channel('public:Submissions')
+          .on('postgres_changes', { event:'INSERT', schema:'public', table:'Submissions' }, payload => {
+            console.log("New post inserted:", payload.new);
+            renderPost(payload.new);
+          });
+        await channel.subscribe();
+      }
+
+      loadPosts();
+      setupRealtime();
+    };
   </script>
 </body>
 </html>
