--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <footer>&copy; First Love Church – Women’s Group</footer>
 
   <script>
-    // Hamburger
+    // Hamburger menu
     const hamburger = document.querySelector(".hamburger");
     const navLinks = document.querySelector(".nav-links");
     hamburger.addEventListener("click", () => {
@@ -153,12 +153,10 @@
       localStorage.setItem('largeText', document.body.classList.contains('large-text'));
     });
 
-    // Supabase setup
-    import { createClient } from '@supabase/supabase-js'; // Assuming you are using a module system like ES Modules
-
+    // Supabase Realtime-only setup
     const supabaseUrl = "https://btercxzikklbkjpltoey.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0ZXJjeHppa2tsYmtqcGx0b2V5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU5NjksImV4cCI6MjA3MTU4MTk2OX0.o0iUcb89y0TaN2-ze0cEFxljCt-tsZmbrZDl8NnEGfc";
-    const supabase = createClient(supabaseUrl, supabaseKey);
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     const categoryMap = { "Prayer":"prayer", "Provision":"provision", "Event":"event", "Other Update":"update" };
 
@@ -179,33 +177,14 @@
       container.prepend(card);
     }
 
-    // Load initial posts using Realtime subscription
-    async function initRealtime() {
-      // Subscribe to changes
-      const channel = supabase
-        .channel('public:Submissions')
-        .on('postgres_changes', { event:'INSERT', schema:'public', table:'Submissions' }, payload => {
-          console.log("New post inserted:", payload.new);
-          renderPost(payload.new);
-        })
-        .subscribe();
-
-      // Fetch existing posts
-      const { data: posts, error } = await supabase
-        .from('Submissions')
-        .select('*')
-        .order('Created_at', { ascending: false });
-
-      if(error){
-        console.error("Error fetching posts:", error);
-        return;
-      }
-
-      console.log("Fetched posts:", posts);
-      posts.forEach(post => renderPost(post));
-    }
-
-    initRealtime();
+    // Setup Realtime subscription
+    supabase
+      .channel('public:Submissions')
+      .on('postgres_changes', { event:'INSERT', schema:'public', table:'Submissions' }, payload => {
+        console.log("New post:", payload.new);
+        renderPost(payload.new);
+      })
+      .subscribe();
   </script>
 </body>
 </html>
