--- a/index.html
+++ b/index.html
@@ -100,11 +100,7 @@
     <button id="toggle-text">Toggle Larger Text</button>
   </div>
 
-  <!-- Add a Post Button with Tally popup -->
-  <button class="button" 
-          data-tally-open="w7AQdP" 
-          data-tally-layout="modal" 
-          data-tally-hide-title="1">
+  <button class="button" data-tally-open="w7AQdP" data-tally-layout="modal" data-tally-hide-title="1">
     Add a Post
   </button>
 
@@ -155,8 +151,8 @@
 
     // --- Supabase setup ---
     const supabaseUrl = "https://btercxzikklbkjpltoey.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhZmFzZSIsInJlZiI6ImJ0ZXJjeHppa2tsYmtqcGx0b2V5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU5NjksImV4cCI6MjA3MTU4MTk2OX0.o0iUcb89y0TaN2-ze0cEFxljCt-tsZmbrZDl8NnEGfc";
-    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    const supabaseKey = "YOUR_SUPABASE_KEY_HERE"; // replace with your actual key
+    const supabase = supabaseJs.createClient(supabaseUrl, supabaseKey);
 
     const categoryMap = { "Prayer":"prayer", "Provision":"provision", "Event":"event", "Other Update":"update" };
 
@@ -186,9 +182,8 @@
       posts.forEach(post => renderPost(post));
     }
 
-    // Poll every 5 seconds for live updates
+    // Initial load
     loadPosts();
-    setInterval(loadPosts, 5000);
   </script>
 </body>
 </html>
